<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XorgTablet</string>
    <string name="preferences_host_title">X.org host</string>
    <string name="preferences_networking">Networking</string>
    <string name="preferences_input">Input</string>
    <string name="touch_input_preference">Enable touch input</string>
    <string name="absolute_preference">Use absolute position for touch input</string>
    <string name="pressure_threshold_preference">Pressure threshold to click</string>
    <string name="menu_about">About</string>
    <string name="menu_gestures">Gestures</string>
    <string name="menu_settings">Settings</string>
    <string name="button_website">GitHub page</string>
    
    <string name="website">https://github.com/rfc2822/XorgTablet</string>
    <string name="about">XorgTablet by rfc2822, romke and neilisaac</string>
    <string name="gestures">Click: single-tap\nSelect or drag: long press\nScroll: two finger swipe</string>

</resources>