<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/preferences_networking" >
        <EditTextPreference
            android:defaultValue=""
            android:key="host_preference"
            android:singleLine="true"
            android:title="@string/preferences_host_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/preferences_input" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="touch_input_preference"
            android:title="@string/touch_input_preference" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="touch_input_preference"
            android:key="absolute_motion_preference"
            android:title="@string/absolute_preference" />
        <ListPreference
            android:defaultValue="0.2"
            android:dependency="absolute_motion_preference"
            android:entries="@array/pressure_threshold_values"
            android:entryValues="@array/pressure_threshold_values"
            android:key="pressure_threshold_preference"
            android:title="@string/pressure_threshold_preference" />
    </PreferenceCategory>

</PreferenceScreen>